--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "devtools": "npx @ai-sdk/devtools"
   },
   "dependencies": {
+    "@ai-sdk/devtools": "^0.0.5",
+    "@ai-sdk/gateway": "^3.0.14",
     "@ai-sdk/react": "^3.0.37",
     "ai": "^6.0.35",
     "next": "16.1.2",
