--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@ai-sdk/devtools": "^0.0.5",
     "@ai-sdk/gateway": "^3.0.14",
     "@ai-sdk/react": "^3.0.37",
+    "@radix-ui/react-slot": "^1.2.4",
     "ai": "^6.0.35",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
