--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/gateway": "^3.0.14",
     "@ai-sdk/react": "^3.0.37",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "ai": "^6.0.35",
     "class-variance-authority": "^0.7.1",
