--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/react": "^3.0.37",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "ai": "^6.0.35",
     "class-variance-authority": "^0.7.1",
